fixed pixel gaps when canvas width is low issue

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ div.container {
 div.canvas {
     display: grid;
     grid-template-columns: repeat(var(--canvas-side-width, 16), 1fr);
+    gap: 0px;
     justify-items: center;
     justify-content: center;
     border: 1px solid blue;
@@ -34,8 +35,6 @@ div.canvas {
     min-width: 1px;
     height: calc(var(--pixel-width)*1px);
     width: calc(var(--pixel-width)*1px);
-    max-height: 1rem;
-    max-width: 1rem;
 }
 
 .active {
